Updated Mod list

--- a/QOL.html
+++ b/QOL.html
@@ -95,6 +95,15 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
+          <td data-type="DisplayName">ace - good version</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2425597215" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2425597215</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
           <td data-type="DisplayName">ACRE2</td>
           <td>
             <span class="from-steam">Steam</span>
@@ -389,6 +398,15 @@ a:hover {
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1779063631" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=1779063631</a>
+          </td>
+        </tr>
+        <tr data-type="ModContainer">
+          <td data-type="DisplayName">Zeus Enhanced - ACE3 Compatibility</td>
+          <td>
+            <span class="from-steam">Steam</span>
+          </td>
+          <td>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2018593688" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2018593688</a>
           </td>
         </tr>
       </table>
