--- a/QOL.html
+++ b/QOL.html
@@ -95,12 +95,12 @@ a:hover {
           </td>
         </tr>
         <tr data-type="ModContainer">
-          <td data-type="DisplayName">ace - good version</td>
+          <td data-type="DisplayName">ace</td>
           <td>
             <span class="from-steam">Steam</span>
           </td>
           <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2425597215" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2425597215</a>
+            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=463939057" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=463939057</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
@@ -344,15 +344,6 @@ a:hover {
           </td>
           <td>
             <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2153127400" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2153127400</a>
-          </td>
-        </tr>
-        <tr data-type="ModContainer">
-          <td data-type="DisplayName">Simple MapTools</td>
-          <td>
-            <span class="from-steam">Steam</span>
-          </td>
-          <td>
-            <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=2013446344" data-type="Link">http://steamcommunity.com/sharedfiles/filedetails/?id=2013446344</a>
           </td>
         </tr>
         <tr data-type="ModContainer">
